--- a/app/views/layouts/_page_chrome.html.erb
+++ b/app/views/layouts/_page_chrome.html.erb
@@ -8,7 +8,7 @@
   Skip to main content
 </a>
 
-<%= render 'header' %>
+<%= render 'layouts/header' %>
 
 <main id="pmacsMain" class="chrome-context -col lg:-row lg:-fixed flex-wrap lg:flex-no-wrap">
 
