--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,20 @@
 <header id="ccwc-header"
         class="chrome navbar navbar-light navbar-expand-xs bg-light flex flex-wrap lg:flex-no-wrap border-b p-2">
   <div id="ccwc-title"
-       class="flex flex-row items-center justify-between flex-auto flex-no-shrink">
-    <div class="text-center">
+       class="inline-block flex flex-row items-center justify-between flex-auto flex-no-shrink">
+    <div class="text-center h2 mb-0">
       CCWC
     </div>
+  </div>
 
+  <div id="header-navigation"
+       class="inline-block">
+    <ul id="main-nav-list"
+        class="flex flex-row items-center justify-between flex-auto mb-0 mr-2">
+      <li>About Us</li>
+      <li>Get Informed</li>
+      <li>Get Involved</li>
+      <li>Get Help</li>
+    </ul>
   </div>
 </header>
