Get Layouts Set Properly With Flex

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,6 +1,10 @@
 #main-nav-list > li {
   display: inline;
-  margin-left: .5rem;
+  margin-left: 1.5rem;
 }
+
+//#main-nav-list > li:last-of-type {
+//  background-color: yellow;
+//}
 
 
