--- a/app/views/layouts/_page_chrome.html.erb
+++ b/app/views/layouts/_page_chrome.html.erb
@@ -1,23 +1,19 @@
-<body class="chrome-context -col lg:-fixed"
-      data-controller="pmacs-collapsible"
-      data-target="pmacs-collapsible.context">
-<a href="#content"
-   id="skip-nav"
-   class="sr-only sr-only-focusable text-center chrome"
-   style="background-color: var(--secondary); color: var(--white);">
-  Skip to main content
-</a>
+<body class="">
+  <a href="#content"
+     id="skip-nav"
+     class="sr-only sr-only-focusable text-center chrome">
+    Skip to main content
+  </a>
 
-<%= render 'layouts/header' %>
+  <%= render 'layouts/header' %>
+  <%= render 'layouts/emergency_exit' %>
 
-<main id="pmacsMain" class="chrome-context -col lg:-row lg:-fixed flex-wrap lg:flex-no-wrap">
+  <main class="flex">
+    <article id="content"
+             class="p-4"
+             tabindex="-1">
+      <%= yield %>
+    </article>
 
-  <article id="content"
-           class="p-4"
-           tabindex="-1">
-    <%= yield %>
-  </article>
-
-</main>
-
+  </main>
 </body>
