--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,10 +1,40 @@
 #main-nav-list > li {
   display: inline;
-  margin-left: 1.5rem;
+  padding: 1rem;
 }
 
-//#main-nav-list > li:last-of-type {
-//  background-color: yellow;
-//}
+#main-nav-list > li:last-of-type {
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+}
 
+.submenu-dropdown {
+  display: none;
+}
+
+.submenu {
+  list-style-type: none;
+
+  li {
+    padding: .5em;
+  }
+}
+
+.nav-item-with-dropdown:hover {
+  background-color: dimgrey;
+  color: white;
+
+  & > .submenu-dropdown {
+    display: block;
+    position: absolute;
+    list-style-type: none;
+
+    background-color: dimgrey;
+    color: white;
+
+    li:hover {
+      background-color: darken(dimgrey, 20%);
+    }
+  }
+}
 
