--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,14 +6,23 @@
     </div>
   </div>
 
-  <div id="header-navigation"
+  <nav id="main-navigation"
        class="inline-block">
     <ul id="main-nav-list"
         class="flex flex-row align-items-center mb-0 mr-2">
-      <li>About Us</li>
+      <li class="nav-item-with-dropdown">
+        About Us
+        <div class="submenu-dropdown">
+          <ul class="submenu">
+            <li>Basic Info</li>
+            <li>Contact Us</li>
+            <li>The CCWC Story</li>
+          </ul>
+        </div>
+      </li>
       <li>Get Informed</li>
       <li>Get Involved</li>
       <li class="btn btn-warning">Get Help</li>
     </ul>
-  </div>
+  </nav>
 </header>
