--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -10,13 +10,15 @@
 
 .submenu-dropdown {
   display: none;
+  margin-left: -1em;
 }
 
 .submenu {
   list-style-type: none;
+  padding-left: 0;
 
   li {
-    padding: .5em;
+    padding: 1.5em;
   }
 }
 
