--- a/app/views/layouts/_emergency_exit.html.erb
+++ b/app/views/layouts/_emergency_exit.html.erb
@@ -4,7 +4,7 @@
   <span></span>
   <span></span>
   <i class="fa fa-sign-out fa-2x"></i>
-  <div>
+  <div class="h5 mb-0">
     Emergency Exit (click to close page)
   </div>
   <i class="fa fa-sign-out fa-2x"></i>
