--- a/app/views/layouts/_submenu_dropdown.html.erb
+++ b/app/views/layouts/_submenu_dropdown.html.erb
@@ -1,9 +1,11 @@
 <div class="submenu-dropdown">
   <ul class="submenu">
     <% locals[:subcategories].each do |item| %>
-      <li>
-        <a href="<%= item[:anchor] %>"><%= item[:title] %></a>
-      </li>
+      <a href="<%= item[:anchor] %>">
+        <li>
+          <%= item[:title] %>
+        </li>
+      </a>
     <% end %>
 <!--    <li>Basic Info</li>-->
 <!--    <li>Contact Us</li>-->
