--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,17 @@
 <header id="ccwc-header"
         class="flex flex-row flex-wrap justify-content-between align-items-center p-2">
   <div id="ccwc-title">
-    <div class="text-center h1 mb-0 pl-2">
+    <div class="text-center m-0 pl-2 ultra">
       CCWC
+    </div>
+  </div>
+
+  <div id="ccwc-subtitles">
+    <div class="text-center mb-0 pl-2 ultra">
+      Camden County Women's Center
+    </div>
+    <div class="text-center mb-0 pl-2 ultra">
+      Domestic Violence Safe House & Support
     </div>
   </div>
 
