Make Get Help A Tab (Not Button)

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -29,6 +29,19 @@
 .nav-item-with-dropdown:last-of-type {
   padding-top: .5rem;
   padding-bottom: .5rem;
+  background-color: gold;
+  border: 1px solid purple;
+  border-radius: .25em;
+
+  &:hover, &:focus-within {
+    background-color: darken(dimgrey, 20%);
+    border-radius: 5px 5px 0 0;
+    border: 0;
+  }
+
+  & .submenu-dropdown {
+    margin-left: -7em !important;
+  }
 }
 
 .nav-category-title {
@@ -51,6 +64,10 @@
   li {
     padding: 1em 1em 1em 1.5em;
   }
+}
+
+.submenu-title {
+  padding-right: 2em !important;
 }
 
 .nav-item-with-dropdown:hover,
@@ -96,8 +113,4 @@
       border-radius: 0 0 5px 5px;
     }
   }
-}
-
-#get-help-btn {
-  border-radius: .25em !important;
 }
