--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,16 +1,20 @@
 <header id="ccwc-header"
         class="flex flex-row flex-wrap justify-content-between align-items-center p-2">
-  <div id="ccwc-title">
-    <div class="text-center m-0 pl-2 ultra">
-      CCWC
+  <a href=<%= root_path %>>
+    <div id="ccwc-title">
+      <div class="text-center m-0 pl-2 ultra">
+        <div class="logo-c inline-block">CC</div>
+        <div class="logo-w inline-block">W</div>
+        <div class="logo-c inline-block">C</div>
+      </div>
     </div>
-  </div>
+  </a>
 
-  <div id="ccwc-subtitles">
-    <div class="text-center mb-0 pl-2 ultra">
+  <div id="ccwc-subtitles" class="p-2">
+    <div class="text-center mb-0 ultra">
       Camden County Women's Center
     </div>
-    <div class="text-center mb-0 pl-2 ultra">
+    <div class="text-center mb-0 ultra">
       Domestic Violence Safe House & Support
     </div>
   </div>
