--- a/app/views/layouts/_page_chrome.html.erb
+++ b/app/views/layouts/_page_chrome.html.erb
@@ -8,7 +8,7 @@
   <%= render 'layouts/header' %>
   <%= render 'layouts/emergency_exit' %>
 
-  <main class="flex">
+  <main>
     <article id="content"
              class="p-4"
              tabindex="-1">
