--- a/app/views/static_pages/welcome.html.haml
+++ b/app/views/static_pages/welcome.html.haml
@@ -1,2 +1,20 @@
-Willkommen
-%i.fa.fa-trash
+.container-fluid
+  .row.mb-4
+    .col-12.text-center
+      .h3
+        If you or someone you know is in need of
+        %strong{style: 'color:red;'} immediate assistance
+        call
+      .h3 CCWC's 24/7 Hotline:
+      .h1 856-227-1234
+  .row
+    .col-12
+      =image_tag 'leafy-page-break.png', class: 'card-img-top text-right'
+  .row
+    .col-12.text-center
+      .h4
+        For a counseling appointment or legal advocacy call:
+      .h2
+        856-963-5668.
+      .h5
+        All services are free and confidential.
