--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,10 +1,23 @@
 #ccwc-header {
-  background-color: lightgrey;
+  background-color: #F0F0F0;
   color: purple;
 
   a {
     text-decoration: none;
   }
+}
+
+.logo-c {
+  display: inline-block;
+  color: purple;
+}
+
+.logo-w {
+  display: inline-block;
+  color: #D256D2;
+
+  margin-left: -.25em !important;
+  margin-right: -.25em !important;
 }
 
 #ccwc-title{
@@ -52,7 +65,7 @@
 
 .submenu-dropdown {
   display: none;
-  //margin-left: -1em;
+  z-index: 1;
   margin-top: 1em;
   border-radius: 0 5px 5px 5px;
 }
