Prevent "Back" Button From Working After Emergency Exit

--- a/app/views/layouts/_emergency_exit.html.erb
+++ b/app/views/layouts/_emergency_exit.html.erb
@@ -1,5 +1,6 @@
 <div id="exit-top"
-     class="emergency-exit flex flex-row justify-content-around align-items-center p-2">
+     class="emergency-exit flex flex-row justify-content-around align-items-center p-2"
+     data-exit-url="<%= exit_url %>">
 <!--  The empty spans help us with flex positioning on the icons  -->
   <span></span>
   <span></span>
