Add Footer, Add Logo to Header

--- a/app/views/layouts/_emergency_exit.html.erb
+++ b/app/views/layouts/_emergency_exit.html.erb
@@ -3,12 +3,12 @@
      data-exit-url="<%= exit_url %>">
 <!--  The empty spans help us with flex positioning on the icons  -->
   <span></span>
-  <span></span>
   <i class="fa fa-sign-out fa-2x"></i>
-  <div class="h5 mb-0">
-    Emergency Exit (click to close page)
+  <div class="h5 mb-0 text-center">
+    <strong>Emergency Exit</strong>
+    <br>
+    (click to close page)
   </div>
   <i class="fa fa-sign-out fa-2x"></i>
-  <span></span>
   <span></span>
 </div>
