--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,9 @@
 <header id="ccwc-header"
-        class="flex flex-row flex-wrap justify-content-between align-items-center p-2">
+        class="flex flex-row flex-wrap justify-content-around align-items-center p-2">
   <a href=<%= root_path %>>
     <div id="ccwc-title">
       <div class="text-center m-0 pl-2 ultra">
+        <%= image_tag('ccwc_logo.png', style: 'max-width:2em;') %>
         <div class="logo-c inline-block">CC</div>
         <div class="logo-w inline-block">W</div>
         <div class="logo-c inline-block">C</div>
