Add (Empty) About Us Page, Add Side Image Component

--- a/app/views/layouts/_main_nav.html.erb
+++ b/app/views/layouts/_main_nav.html.erb
@@ -6,7 +6,7 @@
       <a href="#" class="nav-category-title">About Us</a>
       <%= render 'layouts/submenu_dropdown', locals: {
           subcategories: [
-            {title: 'Basic Info', anchor: '#'},
+            {title: 'Basic Info', anchor: about_us_path },
             {title: 'Contact Us', anchor: '#'},
             {title: 'The CCWC Story', anchor: '#'},
             {title: 'Advisory Board', anchor: '#'},
