--- a/app/views/static_pages/welcome.html.haml
+++ b/app/views/static_pages/welcome.html.haml
@@ -18,4 +18,6 @@
   -#    =image_tag 'leafy-page-break.png', class: 'card-img-top text-right'
   .flex.flex-row.justify-content-around.flex-wrap
     .col-12.col-md-6
-      =image_tag 'holiday-toys-2018.jpg', class: 'card-img-top text-right img-thumbnail'
+      =image_tag 'holiday-toys-2018.jpg',
+                 class: 'card-img-top text-right img-thumbnail',
+                 alt: 'CCWC 5th Annual Holiday Toy Drive. Now through December 19th. For more information, call Mindy at 856-963-5668.'
