Pull Footer To Bottom Of Shorter Pages

--- a/app/views/layouts/_page_chrome.html.erb
+++ b/app/views/layouts/_page_chrome.html.erb
@@ -1,4 +1,4 @@
-<body class="">
+<body class="flex flex-col">
   <a href="#content"
      id="skip-nav"
      class="sr-only sr-only-focusable text-center chrome">
