--- a/app/assets/stylesheets/utils.scss
+++ b/app/assets/stylesheets/utils.scss
@@ -37,3 +37,11 @@
 .ultra {
   font-family: 'Ultra', serif !important;
 }
+
+.bg-purple {
+  background-color: rgb(113, 44, 93) !important;
+}
+
+.border-purple {
+  border: 1px solid rgb(113, 44, 93) !important;
+}
