--- a/app/views/layouts/_main_nav.html.erb
+++ b/app/views/layouts/_main_nav.html.erb
@@ -7,10 +7,10 @@
       <%= render 'layouts/submenu_dropdown', locals: {
           subcategories: [
             {title: 'Basic Info', anchor: about_us_path },
-            {title: 'Contact Us', anchor: '#'},
-            {title: 'The CCWC Story', anchor: '#'},
+            {title: 'The CCWC Story', anchor: ccwc_story_path },
             {title: 'Advisory Board', anchor: '#'},
-            {title: 'NJAC', anchor: '#'}
+            {title: 'NJAC', anchor: '#'},
+          {title: 'Contact Us', anchor: '#'}
           ]
       }%>
     </li>
