--- a/app/views/static_pages/welcome.html.haml
+++ b/app/views/static_pages/welcome.html.haml
@@ -15,9 +15,9 @@
         (All services are free and confidential)
   -#.row
   -#  .col-10.offset-1.mb-2
-  -#    =image_tag 'leafy-page-break.png', class: 'card-img-top text-right'
+  -#    =image_tag 'leafy_page_break.png', class: 'card-img-top text-right'
   .flex.flex-row.justify-content-around.flex-wrap
-    .col-12.col-md-6
-      =image_tag 'holiday-toys-2018.jpg',
+    .col-12.col-md-10.col-xl-6
+      =image_tag 'holiday_toys_2018.jpg',
                  class: 'card-img-top text-right img-thumbnail',
                  alt: 'CCWC 5th Annual Holiday Toy Drive. Now through December 19th. For more information, call Mindy at 856-963-5668.'
