Color Changes, Add Advisory Board

--- a/app/assets/stylesheets/exit.scss
+++ b/app/assets/stylesheets/exit.scss
@@ -1,6 +1,6 @@
 .emergency-exit {
   cursor: pointer;
-  background-color: lighten(red, 20%);
+  background-color: lighten(#D256D2, 10%);
   border: 2px dotted black;
 }
 
