--- a/app/assets/stylesheets/utils.scss
+++ b/app/assets/stylesheets/utils.scss
@@ -38,6 +38,10 @@
   font-family: 'Ultra', serif !important;
 }
 
+.white {
+  color: white;
+}
+
 .bg-purple {
   background-color: rgb(113, 44, 93) !important;
 }
