--- a/app/views/static_pages/about_us.html.haml
+++ b/app/views/static_pages/about_us.html.haml
@@ -4,7 +4,7 @@
 
 .card.border-purple.mb-2
   .card-header.bg-purple
-    %h2.text-center Basic Info
+    %h2.text-center.white Basic Info
   .card-body
     = render partial: 'components/card_with_side_image',
       locals: { image_path: 'ccwc_logo.png',
@@ -12,7 +12,7 @@
 
 .card.border-purple.mb-2
   .card-header.bg-purple
-    %h2.text-center Our Guiding Principles
+    %h2.text-center.white Our Guiding Principles
   .card-body
     = render partial: 'components/card_with_side_image',
       locals: { image_path: 'rainbow_triangle.png',
