--- a/app/views/layouts/_main_nav.html.erb
+++ b/app/views/layouts/_main_nav.html.erb
@@ -8,8 +8,8 @@
           subcategories: [
             {title: 'Basic Info', anchor: about_us_path },
             {title: 'The CCWC Story', anchor: ccwc_story_path },
-            {title: 'Advisory Board', anchor: '#'},
-            {title: 'NJAC', anchor: '#'},
+            {title: 'Advisory Board', anchor: advisory_board_path },
+            # {title: 'NJAC', anchor: '#'},
           {title: 'Contact Us', anchor: '#'}
           ]
       }%>
