Add Contact Us Page With Form

--- a/app/views/layouts/_main_nav.html.erb
+++ b/app/views/layouts/_main_nav.html.erb
@@ -9,8 +9,8 @@
             {title: 'Basic Info', anchor: about_us_path },
             {title: 'The CCWC Story', anchor: ccwc_story_path },
             {title: 'Advisory Board', anchor: advisory_board_path },
-            # {title: 'NJAC', anchor: '#'},
-          {title: 'Contact Us', anchor: '#'}
+            {title: 'Contact Us', anchor: contact_us_path }
+          # {title: 'NJAC', anchor: '#'},
           ]
       }%>
     </li>
