--- a/app/views/static_pages/ccwc_story.html.haml
+++ b/app/views/static_pages/ccwc_story.html.haml
@@ -1,7 +1,9 @@
 
+%h1.sr-only Our Story
 =image_tag 'our_story.png',
            class: 'card-img-top text-right col-12 col-md-6 offset-md-3',
            alt: 'Text Image: Our Story'
+
 
 = render partial: 'components/card_with_side_image',
       locals: { image_path: 'ccwc_logo.png',
