--- a/app/views/static_pages/contact_us.html.haml
+++ b/app/views/static_pages/contact_us.html.haml
@@ -8,4 +8,7 @@
       %p Email ccwcinfo@njaconline.org for more information.
 
   .col-12.col-md-8.col-lg-6
-    %iframe{ src: 'https://docs.google.com/forms/viewform?authuser=0&bc=transparent&embedded=true&f=%2527Raleway%2527%252Csans-serif&hl=en&htc=%2523999999&id=1IsEhEfhs9tuiHDOWxj709M27x11J4-ItxlIkywDUXto&lc=%25238a8c50&pli=1&tc=%2523666666&ttl=0', height: '700px', width: '100%' }
+    %iframe{ src: 'https://docs.google.com/forms/viewform?authuser=0&bc=transparent&embedded=true&f=%2527Raleway%2527%252Csans-serif&hl=en&htc=%2523999999&id=1IsEhEfhs9tuiHDOWxj709M27x11J4-ItxlIkywDUXto&lc=%25238a8c50&pli=1&tc=%2523666666&ttl=0',
+             height: '700px',
+             width: '100%',
+             style: 'border:0;' }
